@@ -1,14 +1,10 @@
 package de.plushnikov.intellij.plugin.quickfix;
 
-import com.intellij.codeInsight.CodeInsightUtil;
 import com.intellij.codeInsight.generation.GenerateMembersUtil;
 import com.intellij.codeInsight.generation.PsiGenerationInfo;
-import com.intellij.codeInspection.LocalQuickFixOnPsiElement;
-import com.intellij.codeInspection.util.IntentionName;
-import com.intellij.openapi.command.WriteCommandAction;
-import com.intellij.openapi.command.undo.UndoUtil;
-import com.intellij.openapi.editor.Editor;
-import com.intellij.openapi.project.Project;
+import com.intellij.modcommand.ActionContext;
+import com.intellij.modcommand.ModPsiUpdater;
+import com.intellij.modcommand.PsiUpdateModCommandAction;
 import com.intellij.psi.*;
 import de.plushnikov.intellij.plugin.LombokBundle;
 import org.jetbrains.annotations.NotNull;
@@ -16,13 +12,13 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * @author Plushnikov Michail
  */
-public class CreateFieldQuickFix extends LocalQuickFixOnPsiElement {
+public class CreateFieldQuickFix extends PsiUpdateModCommandAction<PsiClass> {
   private final String myName;
   private final PsiType myType;
   private final String myInitializerText;
@@ -38,54 +34,35 @@ public class CreateFieldQuickFix extends LocalQuickFixOnPsiElement {
 
   @Override
   @NotNull
-  @IntentionName
-  public String getText() {
+  public String getFamilyName() {
     return LombokBundle.message("intention.name.create.new.field.s", myName);
   }
 
   @Override
-  @NotNull
-  public String getFamilyName() {
-    return getText();
-  }
+  protected void invoke(@NotNull ActionContext context, @NotNull PsiClass myClass, @NotNull ModPsiUpdater updater) {
+    PsiElement lBrace = myClass.getLBrace();
+    if (lBrace == null) return;
 
-  @Override
-  public void invoke(@NotNull Project project, @NotNull PsiFile psiFile, @NotNull PsiElement startElement, @NotNull PsiElement endElement) {
-    final PsiClass myClass = (PsiClass) startElement;
-    final Editor editor = CodeInsightUtil.positionCursor(project, psiFile, myClass.getLBrace());
-    if (editor != null) {
-      WriteCommandAction.writeCommandAction(project, psiFile).run(() ->
-        {
-          final PsiElementFactory psiElementFactory = JavaPsiFacade.getElementFactory(project);
-          final PsiField psiField = psiElementFactory.createField(myName, myType);
+    final PsiElementFactory psiElementFactory = JavaPsiFacade.getElementFactory(context.project());
+    final PsiField psiField = psiElementFactory.createField(myName, myType);
 
-          final PsiModifierList modifierList = psiField.getModifierList();
-          if (null != modifierList) {
-            for (String modifier : myModifiers) {
-              modifierList.setModifierProperty(modifier, true);
-            }
-          }
-          if (null != myInitializerText) {
-            PsiExpression psiInitializer = psiElementFactory.createExpressionFromText(myInitializerText, psiField);
-            psiField.setInitializer(psiInitializer);
-          }
+    final PsiModifierList modifierList = psiField.getModifierList();
+    if (modifierList != null) {
+      for (String modifier : myModifiers) {
+        modifierList.setModifierProperty(modifier, true);
+      }
+    }
+    if (myInitializerText != null) {
+      PsiExpression psiInitializer = psiElementFactory.createExpressionFromText(myInitializerText, psiField);
+      psiField.setInitializer(psiInitializer);
+    }
 
-          final List<PsiGenerationInfo<PsiField>> generationInfos = GenerateMembersUtil.insertMembersAtOffset(myClass.getContainingFile(), editor.getCaretModel().getOffset(),
-            Collections.singletonList(new PsiGenerationInfo<>(psiField)));
-          if (!generationInfos.isEmpty()) {
-            PsiField psiMember = generationInfos.iterator().next().getPsiMember();
-            editor.getCaretModel().moveToOffset(psiMember.getTextRange().getEndOffset());
-          }
-
-          UndoUtil.markPsiFileForUndo(psiFile);
-        }
-      );
+    final List<PsiGenerationInfo<PsiField>> generationInfos = GenerateMembersUtil.insertMembersAtOffset(
+      myClass.getContainingFile(), lBrace.getTextRange().getEndOffset(),
+      List.of(new PsiGenerationInfo<>(psiField)));
+    if (!generationInfos.isEmpty()) {
+      PsiField psiMember = Objects.requireNonNull(generationInfos.iterator().next().getPsiMember());
+      updater.moveTo(psiMember.getTextRange().getEndOffset());
     }
   }
-
-  @Override
-  public boolean startInWriteAction() {
-    return false;
-  }
-
 }
